--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Bloqueur Personnalisé",
-  "version": "1.0",
+  "version": "1,1",
   "description": "Masquez les éléments indésirables sur n'importe quel site web",
   "permissions": [
     "storage",
@@ -14,9 +14,9 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "icons/icon16.png",
-      "48": "icons/icon48.png",
-      "128": "icons/icon128.png"
+      "16": "icons/bloqueur.png",
+      "48": "icons/bloqueur.png",
+      "128": "icons/bloqueur.png"
     }
   },
   "background": {
@@ -31,8 +31,8 @@
     }
   ],
   "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
+    "16": "icons/bloqueur.png",
+    "48": "icons/bloqueur.png",
+    "128": "icons/bloqueur.png"
   }
 }
